fix: correcting the Excellence Partners logo

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </p>
         </div>
        <div class="companies-info">
-          <ul class="companies-list">
+          <!-- <ul class="companies-list">
             <li class="company">
               <img
                 src="./assets/imgs/icons/companies/logo-recruiter.jpg"
@@ -133,7 +133,7 @@
                 class="company-logo"
               />
             </li>
-            <!-- <li class="company">
+           <li class="company">
               <img
                 src="./assets/imgs/icons/companies/amazon-icon.webp"
                 alt="logo"
@@ -174,8 +174,8 @@
                 alt="logo"
                 class="company-logo"
               />
-            </li> -->
-          </ul>
+            </li> 
+          </ul> -->
           <p class="vacancy-number">
             <strong>+267 vagas</strong> estão esperando por você!
           </p>
@@ -267,15 +267,15 @@
             Estamos entusiasmados em oferecer aos nossos Juninhos recursos
             de alta qualidade, graças às nossas valiosas parcerias!
           </p>
-          <!-- <ul class="partners-list">
-            <li class="partner udemy">
+          <ul class="partners-list">
+            <li class="partner recruiter">
               <img
-                src="assets/imgs/icons/partners/udemy-icon.webp"
+                src="assets/imgs/icons/partners/logo-recruiter.jpg"
                 alt="Logo da parceira da Decola Juninho"
                 class="partner-image"
               />
             </li>
-            <li class="partner coursera">
+            <!-- <li class="partner coursera">
               <img
                 src="assets/imgs/icons/partners/coursera-icon.webp"
                 alt="Logo da parceira da Decola Juninho"
@@ -309,8 +309,8 @@
                 alt="Logo da parceira da Decola Juninho"
                 class="partner-image"
               />
-            </li>
-          </ul> -->
+            </li> -->
+          </ul>
         </div>
       </section>
 
