fix: update available vacancies message

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </li> 
           </ul> -->
           <p class="vacancy-number">
-            <strong>+267 vagas</strong> estão esperando por você!
+            <strong>Muitas vagas</strong> estão esperando por você!
           </p>
         </div>
       </section>
