--- a/index.html
+++ b/index.html
@@ -593,7 +593,8 @@
             <li class="feedback-item-selection" />
             <li class="feedback-item-selection" />
           </ul> -->
-
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
           <div class="swiper-pagination"></div>
         </div>
       </section>
